[gd_scene load_steps=5 format=3 uid="uid://by2dglfce4xhv"]

[ext_resource type="Script" path="res://rails/scripts/branch.gd" id="1_mtk6j"]
[ext_resource type="Material" uid="uid://covkp10dxj5ft" path="res://materials/extra.tres" id="3_t5e3f"]
[ext_resource type="PackedScene" uid="uid://d11ytugao7sge" path="res://rails/branch_gimmick.tscn" id="5_4al8o"]

[sub_resource type="SphereShape3D" id="SphereShape3D_syqjc"]

[node name="BranchRail" type="Node3D"]
script = ExtResource("1_mtk6j")
gimmick_mesh_paths = Array[NodePath]([NodePath("BranchGimmick/MovableUnit/CollisionShape3D/MeshInstance3D"), NodePath("BranchGimmick/MovableUnit/CollisionShape3D2/MeshInstance3D2"), NodePath("BranchGimmick/MovableUnit/CollisionShape3D3/MeshInstance3D2"), NodePath("BranchGimmick/Pole/CollisionShape3D/MeshInstance3D")])
metadata/_edit_group_ = true

[node name="BranchGimmick" parent="." instance=ExtResource("5_4al8o")]
transform = Transform3D(0.907673, 0.258819, -0.330366, -0.24321, 0.965926, 0.0885213, 0.34202, -7.45058e-09, 0.939693, 2.5, -0.67379, 0)

[node name="MovableUnit" parent="BranchGimmick" index="0"]
transform = Transform3D(1, -2.54825e-09, -5.96046e-08, -1.31296e-08, 1, 4.94255e-09, 0, -7.00125e-09, 1, 0, 0, 0)
max_contacts_reported = 1
contact_monitor = true

[node name="MeshInstance3D" parent="BranchGimmick/MovableUnit/CollisionShape3D" index="0"]
material_override = ExtResource("3_t5e3f")

[node name="MeshInstance3D2" parent="BranchGimmick/MovableUnit/CollisionShape3D2" index="0"]
material_override = ExtResource("3_t5e3f")

[node name="MeshInstance3D2" parent="BranchGimmick/MovableUnit/CollisionShape3D3" index="0"]
material_override = ExtResource("3_t5e3f")

[node name="MeshInstance3D" parent="BranchGimmick/Pole/CollisionShape3D" index="0"]
material_override = ExtResource("3_t5e3f")

[node name="HingeJoint3D" parent="BranchGimmick" index="2"]
transform = Transform3D(1, -2.98023e-08, -1.15003e-08, -1.31296e-08, -3.97609e-08, -1, 0, 1, -3.15969e-08, 0, 0, 0)

[node name="MagneticField1" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.324, -0.215, -0.75)
collision_layer = 2
collision_mask = 2
gravity_space_override = 3
gravity_point = true
gravity_point_center = Vector3(0, 0, 0)
gravity_direction = Vector3(0, 0, 0)
gravity = 5.0
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="MagneticField1"]
shape = SubResource("SphereShape3D_syqjc")

[node name="MagneticField2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.324, -0.215, 0.75)
collision_layer = 2
collision_mask = 2
gravity_space_override = 3
gravity_point = true
gravity_point_center = Vector3(0, 0, 0)
gravity_direction = Vector3(0, 0, 0)
gravity = 5.0
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="MagneticField2"]
shape = SubResource("SphereShape3D_syqjc")

[connection signal="body_entered" from="BranchGimmick/MovableUnit" to="." method="_on_movable_unit_body_entered"]
[connection signal="body_entered" from="MagneticField1" to="." method="_on_magnetic_field_body_entered"]
[connection signal="body_entered" from="MagneticField2" to="." method="_on_magnetic_field_body_entered"]

[editable path="BranchGimmick"]
